add code to julie notebook to clean test data

--- a/project02/julie.ipynb
+++ b/project02/julie.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,15 @@
     "spelling_test = {\"bla\" : \"ble\", \"blo\" : \"blu\"}\n",
     "common_test = [\"!\", \"plop\"]\n",
     "clean_txt(\"clean_test.txt\", True, True, spelling_test, True, True, common_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_txt(\"Datasets/test_data.txt\", False, True, spelling_dict, True, True, common)"
    ]
   },
   {
@@ -545,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
