--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -76,7 +76,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(21161, 250)"
+      "text/plain": [
+       "(21161, 250)"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +111,8 @@
     "    l = l.strip()\n",
     "    words_list.append(l)\n",
     "words_list = np.array(words_list)\n",
-    "f.close()"
+    "f.close()\n",
+    "np.save(\"words_list_small_dataset.npy\", words_list)"
    ]
   },
   {
@@ -119,7 +122,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "12404"
+      "text/plain": [
+       "12404"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -230,12 +235,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "tweets_pos_vec = np.load('tweets_pos_vec_sam.npy')\n",
     "tweets_neg_vec = np.load('tweets_neg_vec_sam.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 250)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_pos_vec.shape"
    ]
   },
   {
@@ -402,11 +427,22 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": "/Users/samuel/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:568: UserWarning: Training interrupted by user.\n  warnings.warn(\"Training interrupted by user.\")\n"
+     "text": [
+      "/Users/samuel/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:568: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
     },
     {
      "data": {
-      "text/plain": "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n              hidden_layer_sizes=(250, 250), learning_rate='constant',\n              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n              validation_fraction=0.1, verbose=False, warm_start=False)"
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=(250, 250), learning_rate='constant',\n",
+       "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
+       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "              validation_fraction=0.1, verbose=False, warm_start=False)"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -507,7 +543,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n                     metric_params=None, n_jobs=None, n_neighbors=15, p=2,\n                     weights='uniform')"
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=15, p=2,\n",
+       "                     weights='uniform')"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
