--- a/project02/final_svm.ipynb
+++ b/project02/final_svm.ipynb
@@ -12,12 +12,10 @@
     "import warnings\n",
     "warnings.warn = warn\n",
     "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer as CV, TfidfVectorizer as TV\n",
+    "from sklearn.feature_extraction.text import CountVectorizer as CV\n",
     "from sklearn.svm import LinearSVC as SVM\n",
     "from sklearn.model_selection import train_test_split as TrTeS\n",
     "from sklearn.metrics import accuracy_score as AS\n",
-    "from nltk.stem.porter import PorterStemmer as PS\n",
-    "from nltk.stem import WordNetLemmatizer as WNL\n",
     "\n",
     "import re"
    ]
@@ -35,11 +33,7 @@
     "NEG_DATASET  = \"train_neg\"\n",
     "\n",
     "FULL_DATASETS_EXT = \"_full\"\n",
-    "EXT = \".txt\"\n",
-    "\n",
-    "TEST_FILE_ORIGINAL = \"test_data.txt\"\n",
-    "\n",
-    "SUBMISSION_FILE = \"submission.csv\""
+    "EXT = \".txt\""
    ]
   },
   {
@@ -80,22 +74,14 @@
     "    return tweets\n",
     "\n",
     "def get_tweets(full=True):\n",
-    "    return read_tweets_file(True,full), read_tweets_file(False,full)\n",
-    "\n",
-    "def get_submission_tweets():\n",
-    "    tweets = []\n",
-    "    with open(DATASET_PATH+TEST_FILE_ORIGINAL, 'r') as file:\n",
-    "        for line in file:\n",
-    "            tweets.append(\",\".join(line.split(\",\")[1:]))\n",
-    "    \n",
-    "    return tweets"
+    "    return read_tweets_file(True,full), read_tweets_file(False,full)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# simple"
+    "# 3-grams"
    ]
   },
   {
@@ -107,76 +93,6 @@
     "pos, neg = get_tweets()\n",
     "pos, neg = clean(pos), clean(neg)\n",
     "tr       = pos+neg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = CV(binary=True)\n",
-    "cv.fit(tr)\n",
-    "\n",
-    "tra = cv.transform(tr)\n",
-    "\n",
-    "labels = [1 if i < len(pos) else -1 for i in range(len(pos)+len(neg))]\n",
-    "\n",
-    "tr_x, te_x, tr_labels, te_labels = TrTeS(tra, labels, train_size=0.75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
-    "    svm = SVM(C=c, max_iter=60)\n",
-    "    svm.fit(tr_x, tr_labels)\n",
-    "    print (\"Accuracy for {}: {}\".format(c, AS(te_labels, svm.predict(te_x))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2-grams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2 = CV(binary=True, ngram_range=(1, 2))\n",
-    "cv2.fit(tr)\n",
-    "\n",
-    "tra = cv2.transform(tr)\n",
-    "\n",
-    "labels = [1 if i < len(pos) else -1 for i in range(len(pos)+len(neg))]\n",
-    "\n",
-    "tr_x, te_x, tr_labels, te_labels = TrTeS(tra, labels, train_size=0.75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
-    "    svm = SVM(C=c, max_iter=60)\n",
-    "    svm.fit(tr_x, tr_labels)\n",
-    "    print (\"Accuracy for {}: {}\".format(c, AS(te_labels, svm.predict(te_x))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3-grams"
    ]
   },
   {
@@ -201,8 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
-    "    svm = SVM(C=c, max_iter=60)\n",
+    "for c in [0.02, 0.05, 0.08, 0.11]:\n",
+    "    svm = SVM(C=c, max_iter=500)\n",
     "    svm.fit(tr_x, tr_labels)\n",
     "    print (\"Accuracy for {}: {}\".format(c, AS(te_labels, svm.predict(te_x))))"
    ]
@@ -236,43 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
-    "    svm = SVM(C=c, max_iter=60)\n",
-    "    svm.fit(tr_x, tr_labels)\n",
-    "    print (\"Accuracy for {}: {}\".format(c, AS(te_labels, svm.predict(te_x))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TF-IDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tv3 = TV(binary=True)\n",
-    "tv3.fit(tr)\n",
-    "\n",
-    "tra = tv3.transform(tr)\n",
-    "\n",
-    "labels = [1 if i < len(pos) else -1 for i in range(len(pos)+len(neg))]\n",
-    "\n",
-    "tr_x, te_x, tr_labels, te_labels = TrTeS(tra, labels, train_size=0.75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c in [0.01, 0.05, 0.25, 0.5, 1]:\n",
-    "    svm = SVM(C=c, max_iter=60)\n",
+    "for c in [0.02, 0.05, 0.08, 0.11]:\n",
+    "    svm = SVM(C=c, max_iter=500)\n",
     "    svm.fit(tr_x, tr_labels)\n",
     "    print (\"Accuracy for {}: {}\".format(c, AS(te_labels, svm.predict(te_x))))"
    ]
