--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -47,5 +47,7 @@ To do the Neural Nets and the training, we use Tensorflow library from Google an
 
 We try lots of NN configuration (at random but manually chosen). The one that give best results are the one with few hidden layers but lots of neuron per layer. We also add in some of them some Dropout layers with $p\in [0.05, 0.2]$ depending of the size of the layer before.
 the best achieve 84.3\% on Aiwrowd has one input layer of $200$, one hidden layer of $100,000$, one dropout layer with $p=0.15$ and an output layer of 2 nodes. All hidden layers use the ReLU function, we try others but that give poor results. The output layer uses softmax activation function.
+
+We use standard accuracy as loss function. The optimizer used is first 'Adam' which we replace by SGD for better results.
 \end{document}
 
