update report first page

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -14,8 +14,8 @@
 \graphicspath{ {./plots/} }
 
 \begin{document}
-\date{2019 October}
-\title{CS-443 Machine Learning Project 1: J-D-S Team}
+\date{2019 December}
+\title{CS-443 Machine Learning Project 2: TwitterOnFire}
 \author{
   Julie Camille Rosalie Giunta\\
   \texttt{274957}
