add section and subsection for LR and SVM

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -49,5 +49,10 @@ We try lots of NN configuration (at random but manually chosen). The one that gi
 the best achieve 84.3\% on Aiwrowd has one input layer of $200$, one hidden layer of $100,000$, one dropout layer with $p=0.15$ and an output layer of 2 nodes. All hidden layers use the ReLU function, we try others but that give poor results. The output layer uses softmax activation function.
 
 We use standard accuracy as loss function. The optimizer used is first 'Adam' which we replace by SGD for better results.
+\section{Logistic Regression and Support Vector Machine}
+\subsection{Preprocessing}
+\subsection{Logistic Regression}
+\subsection{SVM}
+\subsection{Optimization of SVM}
 \end{document}
 
