--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -53,6 +53,7 @@ We use standard accuracy as loss function. The optimizer used is first 'Adam' wh
 
 We try to train the NN on TPUs provided by Google Colab but as everything is in beta, we cannot make it work.
 
+The number of epochs can only be approximate due all the crashes encountered on Colab but lives around 150 per model.
 \section{Logistic Regression and Support-Vector Machine}
 In this section we take a different approach compared to the last one about neural nets. First, we present the preprocessing steps we applied to clean, normalize and transforme the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifier. Finally, we optimize the most accurate models.
 
