--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -77,7 +77,9 @@ Stemming is a technique  that removes affixes so that similar words are effectiv
 \end{itemize}
 This is often described as brute force as it is not smart but crude. It does not see the difference between a word in its plural form from a word whose last letter is an \textit{s}.
 \subsubsection{Lemmatization}
+This technique is the smart version of stemming. It does a more advanced analysis of word to clearly identify the structure of each word and to cut it correctly.
 \subsubsection{Stop Words}
+
 \subsubsection{Vectorization}
 \subsubsection{Term Frequency-Inverse Document Frequency}
 
@@ -87,5 +89,15 @@ This is often described as brute force as it is not smart but crude. It does not
 
 \subsection{Optimization of SVM}
 
-\end{document}
+\begin{thebibliography}{9}
+	\bibitem{sentianal}
+		Sentiment Analysis with Python
+		\\\texttt{https://towardsdatascience.com/sentiment-analysis-with-python-part-1-5ce197074184}
+		\\\texttt{https://towardsdatascience.com/sentiment-analysis-with-python-part-2-4f71e7bde59a}
+	\bibitem{stemlema}	
+		Stemming and Lemmatization
+		\\\texttt{https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html}
 
+\end{thebibliography}
+
+\end{document}
