Code and submission of current best BERT

--- a/project02/julie.ipynb
+++ b/project02/julie.ipynb
@@ -535,6 +535,240 @@
     "MLP : 0.6565378040037501\n",
     "MLP : hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu'0.6565378040037501"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BERT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"KERAS_BACKEND\"] = \"plaidml.keras.backend\"\n",
+    "\n",
+    "import ktrain\n",
+    "from ktrain import text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "detected encoding: utf-8\n",
+      "preprocessing train...\n",
+      "language: en\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "done."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preprocessing test...\n",
+      "language: en\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "done."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "(x_train_small, y_train_small), (x_test_small, y_test_small), preproc_small = text.texts_from_folder(\"BERT_folder_small\", \n",
+    "                                                                       maxlen=199, \n",
+    "                                                                       preprocess_mode='bert',\n",
+    "                                                                       train_test_names=['train', \n",
+    "                                                                                         'test'],\n",
+    "                                                                       classes=['pos', 'neg'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is Multi-Label? False\n",
+      "maxlen is 199\n",
+      "done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_small = text.text_classifier('bert', (x_train_small, y_train_small), preproc=preproc_small)\n",
+    "learner_small = ktrain.get_learner(model_small,train_data=(x_train_small, y_train_small), val_data=(x_test_small, y_test_small), batch_size=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "begin training using onecycle policy with max lr of 2e-05...\n",
+      "Train on 135990 samples, validate on 45331 samples\n",
+      "135990/135990 [==============================] - 89766s 660ms/sample - loss: 0.3496 - acc: 0.8426 - val_loss: 0.2922 - val_acc: 0.8718\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x29cdf5f10>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learner_small.fit_onecycle(2e-5, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = ktrain.get_predictor(learner_small.model, preproc_small)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def tweets_txt(file_name):\n",
+    "    tweets_txt = []\n",
+    "    f = open(file_name, \"r\")\n",
+    "    for l in f.readlines():\n",
+    "        tweets_txt.append(l.strip())\n",
+    "    f.close()\n",
+    "    return np.array(tweets_txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_test = tweets_txt(\"Datasets/twitter-datasets/test_data.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "result = predictor.predict(tweets_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"bert_result.npy\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make csv\n",
+    "with open(\"submission.csv\", \"w\") as f:\n",
+    "    f.write(\"Id,Prediction\\n\")\n",
+    "    id = 1\n",
+    "    for i in result:\n",
+    "        if i == \"neg\":\n",
+    "            i = -1\n",
+    "        if i == \"pos\":\n",
+    "            i = 1\n",
+    "        l = str(id) + \",\" + str(i) + \"\\n\"\n",
+    "        f.write(l)\n",
+    "        id = id + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TextBlob test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textblob import TextBlob\n",
+    "\n",
+    "tweets_pos_txt = tweets_txt(\"Datasets/twitter-datasets/train_pos.txt\")\n",
+    "tweets_neg_txt = tweets_txt(\"Datasets/twitter-datasets/train_neg.txt\")\n",
+    "\n",
+    "labels_tweets_neg = [(-1, t) for t in tweets_neg_txt]\n",
+    "labels_tweets = [(1, t) for t in tweets_pos_txt]\n",
+    "labels_tweets.append(labels_tweets_neg)"
+   ]
   }
  ],
  "metadata": {
@@ -554,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
