--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -31,9 +31,13 @@
 \clearpage
 
 \section{Introduction}
-In this project, we implement tweets classifiers using neural nets, logistic regression and support-vector machine to predict if their content is positive or negative.
+In this project, we implement tweets classifiers using neural nets, BERT, logistic regression and support-vector machine to predict if their content is positive or negative.
 
-\section{Embedding and Neural Nets}
+\section{Neural Networks}
+
+\subsection{Preprocessing}
+
+\subsection{Embedding and Neural Nets}
 The first part is to transform each tweets in a vector. We first try using an implementation of the 
 GloVE algorithm of our own, the results are not very satisfiing (65\%-70\%). We then use an embedding 
 created by the Stanford University which is also based on GloVE and that used a big Twitter dataset. 
@@ -67,6 +71,11 @@ Here a list of structures and their corresponding score on AIcrowd:
   \item \textbf{$84.2\%$}: model-1 TODO
   \item \textbf{$84.3\%$}: model-4 TODO
 \end{itemize}
+
+\subsection{Convolutional Neural Networks}
+
+\section{BERT}
+
 \section{Logistic Regression and Support-Vector Machine}
 In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transforme the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
 
