--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -36,17 +36,15 @@ In this project, we implement tweets classifiers using neural nets, BERT, logist
 \section{Neural Networks}
 
 \subsection{Preprocessing}
-To clean our data, we follow a algorithm similar to Kim Yoon's paper\cite{kimyoonpaper} and code\cite{kimyooncode}. We remove duplicates on the training set and separate known contractions. For example, "can'nt" becomes "can 'nt".
+To clean our data, we follow an algorithm similar to Kim Yoon's paper\cite{kimyoonpaper} and code\cite{kimyooncode}. We remove duplicates on the training set and separate known contractions. For example, "can'nt" becomes "can 'nt".
 
 \subsection{Embedding and Neural Nets}
 The first part is to transform each tweets in a vector. We first try using an implementation of the 
 GloVE algorithm of our own, the results are not very satisfiing (65\%-70\%). We then use an embedding 
-created by the Stanford University which is also based on GloVE and that used a big Twitter dataset. 
+created by the Stanford University which is also based on GloVE and that used a big Twitter dataset\cite{glovepaper, gloveembedding}. 
 We decide to use the 200 features version.
 We then compute the vector for each tweets as the numerical average of each vector corresponding to the 
 words of which it is composed.
-
-We first try to clean dataset ourselves and then use another technique. (see Preprocessing section) 
 
 To do the Neural Nets and the training, we use Tensorflow library from Google and run it on a Google Colab notebook 
 to have access to the GPUs they offer.
@@ -74,6 +72,7 @@ Here a list of structures and their corresponding score on AIcrowd:
 \end{itemize}
 
 \subsection{Convolutional Neural Networks}
+We also use Stanford University GloVE's embedding\cite{glovepaper, gloveembedding}. To reduce the computational complexity, we reduce the embedding matrix to the most used word vectors and the tweets to contain only words that are in the embedding matrix.
 
 \section{BERT}
 
@@ -158,6 +157,11 @@ By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% 
 	\bibitem{kimyooncode}
 		CNNs for sentence classification
 		\\\texttt{https://github.com/yoonkim/CNN_sentence}
+	\bibitem{glovepaper}
+		PENNINGTON, Jeffrey, SOCHER, Richard, et MANNING, Christopher. Glove: Global vectors for word representation. In : Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP). 2014. p. 1532-1543.
+	\bibitem{gloveembedding}
+		GloVE Twitter pre-trained word vectors
+		\\\texttt{https://nlp.stanford.edu/projects/glove/}
 	\bibitem{sentianal}
 		Sentiment Analysis with Python
 		\\\texttt{https://towardsdatascience.com/sentiment-analysis-with-python-part-1-5ce197074184}
