--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -61,11 +61,13 @@ The number of epochs can only be approximate due all the crashes encountered on 
 
 Considering the difficulties encountered during training process (due mainly to the computational cost), we try lots of NN 
 structures and keep only interesting ones (that beat previous best score on AIcrowd). 
-Here a list of structures and their corresponding score on AIcrowd:
+Here a list of structures and their corresponding score on AIcrowd. Only the hidden layers are shown, all use ReLU as activation function. All model have an input layer of size 200 and an output layer of size 2 that uses Softmax.
 \begin{itemize}
-  \item \textbf{$81.8\%$}: $200->25000->1000->500->2$ ReLU for all layers except last for which Softmax.
-  \item \textbf{$84.2\%$}: model-1 TODO
-  \item \textbf{$84.3\%$}: model-4 TODO
+  \item \textbf{$81.8\%$}: $\rightarrow 25000\rightarrow 1000\rightarrow 500\rightarrow $
+  \item \textbf{$84.2\%$}: $\rightarrow 1000\rightarrow \text{Drop}\rightarrow 1000
+  \rightarrow \text{Drop}\rightarrow 1000\rightarrow \text{Drop}\rightarrow 1000
+  \rightarrow \text{Drop}\rightarrow 1000\rightarrow \text{Drop}\rightarrow $ where Drop is a Dropout layer with $p=0.1$.
+  \item \textbf{$84.3\%$}: $\rightarrow 100000\rightarrow \text{Drop}\rightarrow $ where Drop is a Dropout layer with $p=0.15$
 \end{itemize}
 \section{Logistic Regression and Support-Vector Machine}
 In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transforme the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
