citation should work

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -76,6 +76,9 @@ Here a list of structures and their corresponding score on AIcrowd. Only the hid
 \subsection{Convolutional Neural Networks}
 We also use Stanford University GloVE's embedding\cite{glovepaper, gloveembedding}. To reduce the computational complexity, we reduce the embedding matrix to the most used word vectors and the tweets to contain only words that are in the embedding matrix.
 
+We compare 3 methods:
+
+
 \section{BERT}
 
 \section{Logistic Regression and Support-Vector Machine}
@@ -158,12 +161,17 @@ By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% 
 		KIM, Yoon. Convolutional neural networks for sentence classification. arXiv preprint arXiv:1408.5882, 2014.
 	\bibitem{kimyooncode}
 		CNNs for sentence classification
-		\\\texttt{https://github.com/yoonkim/CNN_sentence}
+		\\\texttt{https://github.com/yoonkim/CNN\_sentence}
 	\bibitem{glovepaper}
 		PENNINGTON, Jeffrey, SOCHER, Richard, et MANNING, Christopher. Glove: Global vectors for word representation. In : Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP). 2014. p. 1532-1543.
 	\bibitem{gloveembedding}
 		GloVE Twitter pre-trained word vectors
-		\\\texttt{https://nlp.stanford.edu/projects/glove/}
+		\\\texttt{https://nlp.stanford.edu/projects/glove}
+	\bibitem{bertpaper}
+		DEVLIN, Jacob, CHANG, Ming-Wei, LEE, Kenton, et al. Bert: Pre-training of deep bidirectional transformers for language understanding. arXiv preprint arXiv:1810.04805, 2018.
+	\bibitem{bertcode}
+		BERT Text Classification in 3 Lines of Code Using Keras
+		\\\texttt{https://towardsdatascience.com/bert-text-classification-in-3-lines-of-code-using-keras-264db7e7a358}
 	\bibitem{sentianal}
 		Sentiment Analysis with Python
 		\\\texttt{https://towardsdatascience.com/sentiment-analysis-with-python-part-1-5ce197074184}
