remove duplicated sentence

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -64,7 +64,7 @@ The number of epochs can only be approximate due all the crashes encountered on 
 
 Considering the difficulties encountered during training process (due mainly to the computational cost), we try lots of NN 
 structures and keep only interesting ones (that beat previous best score on AIcrowd). 
-Here a list of structures and their corresponding score on AIcrowd. Only the hidden layers are shown, all use ReLU as activation function. All model have an input layer of size 200 and an output layer of size 2 that uses Softmax.
+Here a list of structures and their corresponding score on AIcrowd. Only the hidden layers are shown.
 \begin{itemize}
   \item \textbf{$81.8\%$}: $\rightarrow 25000\rightarrow 1000\rightarrow 500\rightarrow $
   \item \textbf{$84.2\%$}: $\rightarrow 1000\rightarrow \text{Drop}\rightarrow 1000
